searxng/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - valkey-server
            - --save
            - "30"
            - "1"
            - --loglevel
            - warning
          image: docker.io/valkey/valkey:8-alpine
          name: redis
          ports:
            - containerPort: 6739
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - SETGID
                - SETUID
                - DAC_OVERRIDE
                - CHOWN
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data
              name: valkey-data2
      restartPolicy: Always
      volumes:
        - name: valkey-data2
          persistentVolumeClaim:
            claimName: valkey-data2
