searxng/searxng-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: searxng
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: searxng
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: searxng-config-secrets
            - configMapRef:
                name: searxng-tune
          image: docker.io/searxng/searxng:latest
          name: searxng
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - ALL
          volumeMounts:
            - mountPath: /etc/searxng/settings.yml
              name: searxng-config
              subPath: settings.yml
            - mountPath: /etc/searxng/limiter.toml
              name: searxng-limiter-config
              subPath: limiter.toml

      restartPolicy: Always
      volumes:
        - name: searxng-config
          configMap:
            name: searxng-config
        - name: searxng-limiter-config
          configMap:
            name: searxng-limiter-config
