searxng/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
  namespace: searxng
spec:
  ports:
    - name: redis
      port: 6739
      targetPort: 6739
  selector:
    io.kompose.service: redis
