searxng/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: searxng
  name: searxng
  namespace: searxng
spec:
  ports:
    - name: http
      port: 8080
      targetPort: web
  selector:
    io.kompose.service: searxng
