searxng/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-ingressroute
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`search.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: searxng
          kind: Service
          namespace: searxng
          port: http
  tls:
    secretName: searxng-tls
